syntax = "proto3";

import "manawave-types.proto";


message BoardPlayerSideCoordinate {
  PlayerSideId playerSideId = 1;
  LeylineDistanceFromSource leylineDistance = 2;
  uint32 familyRank = 3;
}

message MyBoardPlayerSideCoordinate {
  LeylineDistanceFromSource leylineDistance = 1;
  uint32 familyRank = 2;
}

message LeylineState {
  GameBoardMonuments monuments = 1;
}

message TribeCardStockpile {
  uint32 soulstainTokenCount = 1;

  uint32 manaCountersCount = 2;
  uint32 populationIncreaseCountersCount = 3;
  uint32 attackCountersCount = 4;
  uint32 shieldCountersCount = 5;

  // uint32 manalithTokenCount = 6;
}

message ClanCardStockpile {
  uint32 populationTokensCount = 1;
  uint32 manalithTokensCount = 2;

  uint32 manaCountersCount = 3;
  uint32 manalithClaimCountersCount = 4;
  uint32 attackCountersCount = 5;
  uint32 shieldCountersCount = 6;
  uint32 populationIncreaseCountersCount = 7;
  uint32 sacrificeCountersCount = 8;
  uint32 populationSlaughterCountersCount = 9;
}

message TribeCardState {
  TribeCardStockpile stockpile = 1;
}

message ClanCardState {
  ClanCardInstancePbId clanCardInstanceId = 1;
  uint32 activeModeIndex = 2;

  ClanCardStockpile stockpile = 3;
}

message FamilyCardState {
  FamilyCardInstancePbId familyCardInstanceId = 1;
  uint32 activeModeIndex = 2;
}

message ClanColumn {
  ClanCardState clanCard = 1;
  repeated FamilyCardState familyCards = 2;
}

message PlayerBoardSide {
  TribeCardState tribeCard = 1;
  ClanColumn leyline1ClanColumn = 2;
  ClanColumn leyline2ClanColumn = 3;
  ClanColumn leyline3ClanColumn = 4;
}

message FamilyCardSelectionArea {
  FamilyCardInstancePbId choiceA = 1;
  FamilyCardInstancePbId choiceB = 2;
  FamilyCardInstancePbId choiceC = 3;

  uint32 numCardsRemainingInPile = 20;
}

message PlayerFamilyCardSelectionIndicators {
  PlayerCardChoicePb optPlayerCardChoice = 1;
  PlayerCardChoicePb osbPlayerCardChoice = 2;
}

message TribeCardMarkerAdjustments {
  TribeCardStockpile initStockpile = 1;
  TribeCardStockpile finalStockpile = 2;
}

message ClanCardMarkerAdjustments {
  ClanCardStockpile initStockpile = 1;
  ClanCardStockpile finalStockpile = 2;
}

message PlayerSideMarkerAdjustments {
  TribeCardMarkerAdjustments tribeAdjustments = 1;
  ClanCardMarkerAdjustments leyline1ClanAdjustments = 2;
  ClanCardMarkerAdjustments leyline2ClanAdjustments = 3;
  ClanCardMarkerAdjustments leyline3ClanAdjustments = 4;
}

message IntraRoundBoardAdjustments {
  PlayerSideMarkerAdjustments optPlayerSideAdjustments = 1;
  PlayerSideMarkerAdjustments osbPlayerSideAdjustments = 2;
}


message GameBoardStatePb {
  uint32 roundNumber = 1;
  SeasonPbId seasonId = 2;

  LeylineState leylineState = 10;

  PlayerBoardSide optBoardSide = 11;
  PlayerBoardSide osbBoardSide = 12;

  // PlayerBoardSide optBoardSideInit = 11;
  // PlayerBoardSide osbBoardSideInit = 12;

  // PlayerBoardSide optBoardSideFinal = 13;
  // PlayerBoardSide osbBoardSideFinal = 14;

  FamilyCardSelectionArea familyCardSelectionArea = 20;
  PlayerFamilyCardSelectionIndicators playerFamilyCardSelectionIndicators = 21;


  // IntraRoundBoardAdjustments appliedBoardAdjustments = 30;

  GameOutcome gameOutcome = 40;
}
